--- a/clientlibs/pom.xml
+++ b/clientlibs/pom.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-<!--
+
+  <!-- ====================================================================== -->
+  <!-- P A R E N T  P R O J E C T  D E S C R I P T I O N                      -->
+  <!-- ====================================================================== -->
   <parent>
-    <groupId>com.ahmedmusallm</groupId>
+    <groupId>com.ahmedmusallam</groupId>
     <artifactId>front-end</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  -->
-   <groupId>com.ahmedmusallm</groupId>
-  <artifactId>front-end</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+
+  
+  <artifactId>front-end.clientlibs</artifactId>
   <packaging>bundle</packaging>
   <name>front-end - Clientlibs</name>
   <description>A sample clientlib bundle</description>
