--- a/clientlibs/package.json
+++ b/clientlibs/package.json
@@ -14,11 +14,12 @@
     "watch": "webpack --config build/webpack.config.js --watch"
   },
   "dependencies": {
-    "core-js": "^2.5.0"
+    "core-js": "^2.5.0",
+    "milligram-scss": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.26",
     "@types/jquery": "^3.2.10",
+    "@types/node": "^8.0.26",
     "aem-clientlib-generator": "1.3.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
