--- a/clientlibs/package.json
+++ b/clientlibs/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aem-front-end-starter",
+  "name": "aem-pre-op-front-end",
   "version": "1.0.0",
   "description": "A module to build front-end clientlib",
-  "author": "Ahmed Musallam",
+  "author": "Ahmed Musallam, Thomas Wu",
   "license": "UNLICENSED",
   "scripts": {
     "sass-lint": "sass-lint -c .sass-lint.yml 'src/scss/**/*.scss' -v -q",
@@ -14,22 +14,20 @@
     "watch": "webpack --config build/webpack.config.js --watch"
   },
   "dependencies": {
-    "core-js": "^2.5.0",
-    "milligram-scss": "^1.3.0"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.2.10",
-    "@types/node": "^8.0.26",
     "aem-clientlib-generator": "1.3.0",
+    "babel-loader": "^7.1.2",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
+    "ora": "^1.3.0",
     "postcss-loader": "^2.0.6",
     "rimraf": "^2.6.1",
     "sass-lint": "^1.11.0",
     "sass-loader": "^6.0.6",
-    "ts-loader": "^2.3.4",
-    "typescript": "^2.4.2",
     "webpack": "^3.5.5",
     "webpack-livereload-plugin": "^0.11.0",
     "webpack-shell-plugin": "^0.5.0"
