--- a/clientlibs/package.json
+++ b/clientlibs/package.json
@@ -13,6 +13,7 @@
     "upload": "node build/upload-to-aem.js",
     "watch": "webpack --config build/webpack.config.js --watch"
   },
+  "sasslintConfig": ".sass-lint.yml",
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0"
